// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// Package com defines messages shared between IC and DAM server.
package common;

option go_package = "github.com/GoogleCloudPlatform/healthcare-federated-access-services/proto/common/v1";

message Condition {
  string type = 1;
  string source = 2;
  string value = 3;
  string by = 4;
}

message ConditionSet {
  repeated Condition all_of = 1;
}

message Assertion {
  string type = 1;
  string source = 2;
  string value = 3;
  string asserted_duration = 4;
  string expires_duration = 5;
  // Disjunction of Conjunctions (OR of ANDs).
  // If at least one of these ConditionSets evaluates to true, then the
  // conditions on this assertion have been met.
  repeated ConditionSet any_of_conditions = 6;
  string by = 7;
  int64 asserted = 8;
  int64 exp = 9;
}

message Passport {
  map<string, string> standard_claims = 1;
  repeated Assertion ga4gh_assertions = 2;
  repeated bytes internal_encrypted_visas = 11;
}

message TestPersona {
  Passport passport = 1;
  repeated string access = 2;
  map<string, string> ui = 3;
}

message Permissions {
  message PermissionUser {
    map<string, int64> roles = 1;
    // TODO: remove "tags".
    repeated string tags = 2 [deprecated = true];
  }
  string version = 1;
  int64 revision = 2;
  double commit_time = 3;
  map<string, PermissionUser> users = 4;
}

// TODO: remove "tags".
message AccountTag {
  string category = 1;
  map<string, string> ui = 3;
}

// LoginState records states for login and login callback.
message LoginState {
  string idp_name = 1;
  string realm = 2;
  string client_id = 3 [deprecated = true];
  // TODO should also deprecate scope after hydra integration
  // complete.
  string scope = 4;
  string redirect = 5 [deprecated = true];
  string state = 7 [deprecated = true];
  string nonce = 6 [deprecated = true];
  string challenge = 8;
}

// AuthTokenState records states for create auth token.
message AuthTokenState {
  string redirect = 1 [deprecated = true];
  string subject = 2;
  string scope = 3;
  string provider = 4;
  string realm = 5;
  string state = 8 [deprecated = true];
  string nonce = 6 [deprecated = true];
  string login_hint = 7;
  string consent_challenge = 9;
  repeated string audience = 10;
}

message TokenMetadata {
  string name = 1;
  string issued_at = 2;
  string expires = 3;
}

message HistoryEntry {
  int64 revision = 1;
  string user = 2;
  double commit_time = 3;
  string path = 4;
  string query = 5;
  string desc = 6;
  string method = 7;
  string change_type = 8;
  string original_value = 9;
  string change_request = 10;
}

message History {
  repeated HistoryEntry history = 1;
  string next_page_token = 2;
}

///////////////////////////////////////////////////
// oidc

message OidcConfig {
  string issuer = 1 [json_name = "issuer"];
  string jwks_uri = 2 [json_name = "jwks_uri"];
  string auth_endpoint = 3 [json_name = "authorization_endpoint"];
  repeated string response_types_supported = 4
      [json_name = "response_types_supported"];
  string token_endpoint = 5 [json_name = "token_endpoint"];
  string revocation_endpoint = 8 [json_name = "revocation_endpoint"];
  string userinfo_endpoint = 6 [json_name = "userinfo_endpoint"];
  repeated string scopes_supported = 7 [json_name = "scopes_supported"];
}

message OidcTokenResponse {
  message Info {
    string name = 1;
    string email = 2;
  }
  string access_token = 1 [json_name = "access_token"];
  string token_type = 2 [json_name = "token_type"];
  int32 expires_in = 3 [json_name = "expires_in"];
  string refresh_token = 4 [json_name = "refresh_token"];
  string id_token = 5 [json_name = "id_token"];
  string scope = 6;
  string uid = 7;
  Info info = 8;
}
